# LifeAndDeath

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: BaseTypes.cpp  BaseTypes.h  FoodSource.cpp  FoodSource.h  Kroki.cpp  Kroki.h  Map.cpp  Map.h  Point2.h  Population.cpp  Population.h  Visualizer.cpp  Visualizer.h
src/vis/: FoodVisObjectShaderContainer.cpp  FoodVisObjectShaderContainer.h  KrokiContainerInfo.cpp  KrokiContainerInfo.h  KrokiFragmentShader.glsl  KrokiVertexShader.glsl  KrokiVisObjectShaderContainer.cpp  KrokiVisObjectShaderContainer.h  VisManager.cpp  VisManager.h  VisObject.cpp  VisObject.h  VisObjectShaderContainer.cpp  VisObjectShaderContainer.h
